--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-MySQL-python==1.2.5
-pylibmc==1.5.1
-Django==1.9
-django-datadog==1.0.1
+mysqlclient==1.3.10
+
+Django==1.11.3
+# django-datadog==1.0.1
 django-debug-toolbar==1.4
 memcache-toolbar==0.5.6
 datadog==0.12.0
+pylibmc==1.5.2
+
+
+# MySQL-python==1.2.5
